fix word break on single reports

--- a/src/sass/theme/templates/_single-reports.scss
+++ b/src/sass/theme/templates/_single-reports.scss
@@ -42,4 +42,6 @@
 		margin-top: 2rem;
 		margin-bottom: 2rem;
 	}
+
+	word-break: break-word;
 }
